array.island.Island.scala.error
Erreur de compilation :
Island:3: error: identifier expected but integer literal found.
  var a=num[0]
            ^Island:4: error: ']' expected but ';' found.
  var nbNiveau=0
^Island:5: error: '<-' expected but ')' found.
  for(x in num){
              ^Island:10: error: illegal start of simple expression
} 
^